Fix: Avoid applying padding to non sortable items on small tables
Merge pull request #110 from os1r1s110/patch-1

--- a/media/css/dataTables.bootstrap4.css
+++ b/media/css/dataTables.bootstrap4.css
@@ -165,7 +165,7 @@ div.dataTables_scrollFoot > .dataTables_scrollFootInner > table {
     justify-content: center !important;
   }
 }
-table.dataTable.table-sm > thead > tr > th {
+table.dataTable.table-sm > thead > tr > th :not(.sorting_disabled) {
   padding-right: 20px;
 }
 table.dataTable.table-sm .sorting:before,
